implement logging, first pass cli (#14)
