# pygeoapi/views.py
@@ -28,57 +28,148 @@
 #
 # =================================================================
 
+import logging
+
+from flask import request
+# from flask import request, url_for
 
 from pygeoapi.config import settings
 from pygeoapi.provider import load_provider
 
+LOGGER = logging.getLogger(__name__)
+
+
 def describe_collections(f='json'):
+    """
+    Provide feature collection metadata
+
+    :param f: response format (default JSON)
+
+    :returns: dict of feature collection metadata
+    """
+
     # TODO allow other file return formats
-    if f.upper() == 'JSON':
-        fcm = {
-            'collections': []
-        }
+    if f.upper() != 'JSON':
+        msg = 'Unsupported format: {}'.format(f)
+        LOGGER.error(msg)
+        return msg, 400
 
-        for k, v in settings['datasets'].items():
-            collection = {'links': [], 'crs': []}
-            collection['collectionId'] = k
-            collection['title'] = v['title']
-            collection['description'] = v['abstract']
-            for crs in v['crs']:
-                collection['crs'].append(
-                    'http://www.opengis.net/def/crs/OGC/1.3/{}'.format(crs))
-            collection['extent'] = v['extents']['spatial']['bbox']
+    fcm = {
+        'links': [],
+        'collections': []
+    }
 
-            for link in v['links']:
-                lnk = {'rel': link['type'], 'href': link['url']}
-                collection['links'].append(lnk)
+    url = '{}://{}'.format(request.scheme, settings['server']['host'])
+    if settings['server']['port'] not in [80, 443]:
+        url = '{}:{}'.format(url, settings['server']['port'])
 
-            fcm['collections'].append(collection)
+#    LOGGER.debug('Creating links')
+#    fcm['links'] = [{
+#          'rel': 'self',
+#          'type': 'application/json',
+#          'title': 'this document',
+#          'href': '{}{}'.format(url, url_for('index_json')),
+#        }, {
+#          'rel': 'self',
+#          'type': 'text/html',
+#          'title': 'this document as HTML',
+#          'href': '{}{}'.format(url, url_for('index_html')),
+#        }, {
+#          'rel': 'self',
+#          'type': 'application/openapi+json;version=3.0',
+#          'title': 'the OpenAPI definition as JSON',
+#          'href': '{}{}'.format(url, url_for('api_json')),
+#        }, {
+#          'rel': 'self',
+#          'type': 'text/html',
+#          'title': 'the OpenAPI definition as HTML',
+#          'href': '{}{}'.format(url, url_for('api_html')),
+#        }
+#    ]
 
-        return {'collections' : collection}
-    else:
-        return f'"{f}" not supported as a query parameter.', 400
+    LOGGER.debug('Creating collections')
+    for k, v in settings['datasets'].items():
+        collection = {'links': [], 'crs': []}
+        collection['name'] = k
+        collection['title'] = v['title']
+        collection['description'] = v['abstract']
+        for crs in v['crs']:
+            collection['crs'].append(
+                'http://www.opengis.net/def/crs/OGC/1.3/{}'.format(crs))
+        collection['extent'] = v['extents']['spatial']['bbox']
+
+        for link in v['links']:
+            lnk = {'rel': link['type'], 'href': link['url']}
+            collection['links'].append(lnk)
+
+        fcm['collections'].append(collection)
+
+    return fcm
+
 
 def get_specification(f='json'):
     if f.upper() == 'JSON':
         return settings['api']
     else:
-        return  f'"{f}" not supported as a query parameter.', 400
+        return '{} not supported as a query parameter'.format(f), 400
 
-def getFeatures(ds, start_index, count, result_type, bbox=None, f='json'):
-    if ds not in settings['datasets'].keys():
-        return f'dataset {ds} not found.', 400
-    else:
-        p = load_provider(settings['datasets'][ds]['data'])
-        return p.query()
 
-def getFeature(ds, id, f='json'):
-    if ds not in settings['datasets'].keys():
-        return f'dataset {ds} not found.', 400
+def get_features(dataset, startindex=0, count=10, resulttype='results',
+                 bbox=None, f='json'):
+    """
+    Queries feature collection
+
+    :param dataset: dataset to query
+    :param startindex: starting record to return (default 0)
+    :param count: number of records to return (default 10)
+    :param resulttype: return results or hit count (default results)
+    :param bbox: list of minx,miny,maxx,maxy
+    :param f: responase format (default GeoJSON)
+
+    :returns: dict of GeoJSON FeatureCollection
+
+    """
+    if dataset not in settings['datasets'].keys():
+        msg = 'dataset {} not found'.format(dataset)
+        LOGGER.error(msg)
+        return msg, 400
     else:
-        p = load_provider(settings['datasets'][ds]['data'])
-        feat = p.get(id)
-        if feat is None:
-            return f'feature "{id}" not found', 404
-        else:
-            return feat
+        LOGGER.debug('Loading provider')
+        p = load_provider(settings['datasets'][dataset]['data'])
+        LOGGER.debug('Querying provider')
+        LOGGER.debug('startindex: {}'.format(startindex))
+        LOGGER.debug('count: {}'.format(count))
+        LOGGER.debug('resulttype: {}'.format(resulttype))
+        results = p.query(startindex=int(startindex), count=int(count),
+                          resulttype=resulttype)
+
+        return results
+
+
+def get_feature(dataset, id, f='json'):
+    """
+    Get a single feature
+
+    :param dataset: dataset to query
+    :param id: feature identifier
+    :param f: responase format (default GeoJSON)
+
+    :returns: dict of GeoJSON Feature
+
+    """
+    if dataset not in settings['datasets'].keys():
+        msg = 'dataset {} not found'.format(dataset)
+        LOGGER.error(msg)
+        return msg, 400
+
+    LOGGER.debug('Loading provider')
+    p = load_provider(settings['datasets'][dataset]['data'])
+
+    LOGGER.debug('Fetching id {}'.format(id))
+    feature = p.get(id)
+    if feature is None:
+        msg = 'feature {} not found'.format(id)
+        LOGGER.warning(msg)
+        return msg, 404
+
+    return feature
